# OOP

./: README.md
Assignments/A1/: A1.c
Assignments/A23 v3/: CMakeLists.txt  Domain.c  Domain.h  DynamicArray.c  DynamicArray.h  Operations.c  Operations.h  Repository.c  Repository.h  Services.c  Services.h  Tests.c  Tests.h  UI.c  UI.h  Validator.c  Validator.h  main.c
Assignments/A45/: AdminRepo.cpp  AdminRepo.h  CMakeLists.txt  Domain.h  DynamicArray.h  Services.cpp  Services.h  Tests.cpp  Tests.h  UI.cpp  UI.h  UserRepo.cpp  UserRepo.h  main.cpp
Assignments/A6/: CMakeLists.txt
Assignments/A7/: CMakeLists.txt  main.cpp
Assignments/A7/Domain/: Domain.cpp  Domain.h
Assignments/A7/Files/: Movie_database.txt
Assignments/A7/Service/: Services.cpp  Services.h
Assignments/A7/Tests/: Tests.cpp
Assignments/A7/User Interface/: UI.cpp  UI.h
Assignments/A7/Validator/: Exceptions.cpp  Exceptions.h  Validators.h
Assignments/A89/: CMakeLists.txt  UML_diagram_OOP_A7.mdj
Assignments/A89/GUI_2/: designer_gui.cpp  designer_gui.h  designer_gui.ui
Assignments/A89/Service/: Services.cpp  Services.h
Assignments/A89/Validator/: Exceptions.cpp  Exceptions.h  Validators.cpp
Assignments/EXAM_911/: Bacteria.cpp  Bacteria.h  BacteriumRepo.cpp  BacteriumRepo.h  Biologist.cpp  Biologist.h  BiologistsRepo.cpp  BiologistsRepo.h  Domain.cpp  Domain.h  Service.cpp  Service.h  Utils.h  biologistpainter.cpp  biologistpainter.h  biologistpainter.ui  main.cpp  window1.cpp  window1.h  window1.ui
Assignments/T1/: Domain.cpp  Domain.h  Repository.cpp  Repository.h  Services.cpp  Services.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp
Assignments/T2/: Car.cpp  Car.h  Engine.cpp  Engine.h  UI.cpp  UI.h  main.cpp
Assignments/T3/: Domain.cpp  Domain.h  Repository.cpp  Repository.h  Services.cpp  Services.h  gui_qt.cpp  gui_qt.h  gui_qt.ui  main.cpp
Seminar_work/Seminar1/: CMakeLists.txt  Planet.c  Planet.h  Repository.c  Repository.h  Service.c  Service.h  main.c
Seminar_work/Seminar2_911/: CMakeLists.txt  Seminar2_911.sln
Seminar_work/Seminar2_911/Seminar2_911/: DynamicVector.cpp  DynamicVector.h  Header.h  Repository.cpp  Repository.h  Seminar2_911.vcxproj  Seminar2_911.vcxproj.filters  Service.cpp  Service.h  Song.cpp  Song.h  main.cpp
Seminar_work/Seminar3_Week2_implementation/: CMakeLists.txt  Seminar3_Week2_implementation.sln
Seminar_work/Seminar3_Week2_implementation/Seminar3_Week2_implementation/: DynamicVector.h  LinkedList.h  List.h  Seminar3_Week2_implementation.vcxproj  Seminar3_Week2_implementation.vcxproj.filters  main.cpp
Seminar_work/Seminar4_911/: CMakeLists.txt
Seminar_work/Seminar4_911/Playlist/: CSVPlayList.cpp  CSVPlayList.h  FilePlayList.cpp  FilePlayList.h  JSONPlayList.cpp  JSONPlayList.h  Playlist.vcxproj  Playlist.vcxproj.filters  Service.cpp  Service.h  Song.cpp  SongException.cpp  SongException.h  SongValidator.cpp  SongValidator.h  UI.cpp  UI.h  main.cpp  playlist.csv  playlist.json
Seminar_work/Seminar6_V2/: CMakeLists.txt  Repository.cpp  Seminar6_911.cpp  Seminar6_911.h  Seminar6_911.ui  Student.h  TeacherWidget.cpp  TeacherWidget.h  TeacherWidget.ui  main.cpp  studentsModel.cpp  studentsModel.h
Seminar_work/Seminar7/: CMakeLists.txt  ChatSession.cpp  ChatSession.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  UserMessage.cpp  UserMessage.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp
